--- a/static/global.css
+++ b/static/global.css
@@ -1,13 +1,17 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  overflow-y: scroll;
+}
+
 body {
 	margin: 0;
 	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	font-size: 14px;
 	line-height: 1.5;
 	color: #333;
-}
-
-.hero {
-  background-image(image.png);
 }
 
 h1, h2, h3, h4, h5, h6 {
